@@ -8,6 +8,7 @@ v1.9.9
 * imdb::movieconnection() - fixed FollowedBy and added Follows (tnx 2 Qvist)
 * imdb::releaseInfo() now catches a few more cases (missing links)
 * imdbXML class updated with a patch from the author
++ imdb::movieconnections() - added more connections (tnx to Qvist)
 
 v1.9.8 (02.12.2009)
 -------------------
